| Bug #39523 | Backup file missing from backup history log when written as FILE. | ||
|---|---|---|---|
| Submitted: | 18 Sep 2008 17:23 | Modified: | 21 Oct 2008 17:32 |
| Reporter: | Chuck Bell | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Backup | Severity: | S3 (Non-critical) |
| Version: | 6.0.8 | OS: | Any |
| Assigned to: | Chuck Bell | Target Version: | |
| Triage: | Triaged: D4 (Minor) / R1 (None/Negligible) / E1 (None/Negligible) | ||
[18 Sep 2008 17:25]
Chuck Bell
Verified as documented:
Log before patch:
backup_id process_id binlog_pos binlog_file backup_state operation error_num
num_objects total_bytes validity_point_time start_time stop_time
host_or_server_name username backup_file user_comment command drivers
258 0 0 5 1 1632 0
0 081018 16:48:49 081018 16:48:49 localhost root backup database test to '1.bak'
259 0 107 .\mysql-bin.000002 1 1 0
4
Log after patch:
5297 081018 16:48:53 081018 16:48:53 081018 16:48:53 localhost root backup database test
to '2.bak' MyISAM
Columns for this log:
backup_id process_id binlog_pos binlog_file backup_state operation error_num
num_objects total_bytes validity_point_time start_time stop_time
host_or_server_name username backup_file user_comment command drivers
260 0 107 .\mysql-bin.000001 1 1 0
4 5297 081018 16:53:18 081018 16:53:17 081018
16:53:18 localhost root 1.bak backup database test to '1.bak' MyISAM
261 0 107 .\mysql-bin.000001 1 1 0
4 5297 081018 16:53:19 081018 16:53:19 081018
16:53:19 localhost root 1.bak backup database test to '1.bak' MyISAM
[18 Sep 2008 17:56]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/54321 2696 Chuck Bell 2008-09-18 BUG#39523 Backup file missing from backup history log when written as FILE. Patch adds missing write to file for column 'backup_file'.
[18 Sep 2008 17:56]
Chuck Bell
Patch ready for review. Low priority (but easy fix).
[25 Sep 2008 12:16]
Jorgen Loland
Good to push.
[25 Sep 2008 12:27]
Rafal Somla
Good to push.
[17 Oct 2008 17:24]
Bugs System
Pushed into 6.0.8-alpha (revid:cbell@mysql.com-20080925132135-tvef3to52qgpz5kr) (version source revid:oystein.grovlen@sun.com-20080928182351-x4ojdursc9gl8z4o) (pib:5)
[20 Oct 2008 18:39]
Chuck Bell
The worklog WL#4296 has been pushed to main. Worklog has been updated.
[21 Oct 2008 17:32]
Paul DuBois
No changelog entry needed. This bug does not appear in any released version.

Description: The backup_file column is blank when the backup_history log is written to a file. How to repeat: Execute: SET GLOBAL log_backup_output = FILE; BACKUP DATABASE <some db> TO '1.bak'; FLUSH BACKUP LOGS; Examing backup_history.log file for missing '1.bak' in history data. Suggested fix: This is an error of omission. Apply the following patch to repair: === modified file 'sql/log.cc' --- sql/log.cc 2008-09-11 18:21:54 +0000 +++ sql/log.cc 2008-09-18 16:52:05 +0000 @@ -3338,6 +3338,8 @@ bool MYSQL_BACKUP_LOG::write(THD *thd, s goto err; if (write_str(user)) goto err; + if (write_str(history_data->backup_file)) + goto err; if (write_str(history_data->user_comment)) goto err; if (write_str(history_data->command))