BUG#39523 Backup file missing from backup history log when written as FILE.

Patch adds missing write to file for column 'backup_file'.